fix(grid): align footer icons

--- a/packages/apollo-angular-components/projects/angular/components/ui-grid/src/components/ui-grid-custom-paginator/ui-grid-custom-paginator.component.scss
+++ b/packages/apollo-angular-components/projects/angular/components/ui-grid/src/components/ui-grid-custom-paginator/ui-grid-custom-paginator.component.scss
@@ -9,9 +9,16 @@ $mat-paginator-selector-trigger-outline-width: 64px;
 $mat-paginator-selector-trigger-fill-width: 64px;
 
 $mat-paginator-page-label-margin: 0 32px 0 24px;
-$mat-paginator-button-icon-size: 28px;
+$mat-paginator-button-icon-size: 14px;
+$mat-paginator-button-size: 32px;
 
 ui-grid-custom-paginator {
+    .mat-icon-button {
+        width: $mat-paginator-button-size;
+        height: $mat-paginator-button-size;
+        line-height: unset;
+    }
+
     .mat-paginator {
         display: block;
     }
@@ -77,6 +84,7 @@ ui-grid-custom-paginator {
 
     .mat-paginator-icon {
         width: $mat-paginator-button-icon-size;
+        height: $mat-paginator-button-icon-size;
         fill: currentColor;
 
         [dir="rtl"] & {
